refactor: migrate to pure MyBatis and add comprehensive comments
- Replace MyBatis-Plus with pure MyBatis (mybatis-spring-boot-starter 3.0.4)
- Add detailed Chinese comments to all auth module classes
- Add CLXHXH ASCII art banner on startup
- Fix BCryptPasswordEncoder bean not found issue
- Add spring.profiles.active=dev to application.yml
- Add login failure limiting with Redis (5 failures = 30 min lock)
- Add timing attack prevention with dummy password hash
- Add role/permission queries and login success tracking
- Add AuthStartupValidator for Redis connection check
- Add AuthStpInterfaceImpl for sa-Token permission interface

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>